--- a/index.html
+++ b/index.html
@@ -580,6 +580,72 @@
                     </div>
                 </div>
 
+                <!-- Tab Content: Extranjeros -->
+                <div class="tab-content" id="extranjeros">
+                    <div class="services-grid">
+                        <!-- Foreigner License Card -->
+                        <div class="service-item premium-item">
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-passport"></i></div>
+                                <div>
+                                    <h4 data-i18n="svc_foreign_lic_title">Licencia para Extranjeros</h4>
+                                    <small data-i18n="svc_foreign_lic_sub">Driver's License for Foreigners</small>
+                                </div>
+                            </div>
+                            <div class="service-tags">
+                                <span class="tag"><i class="fas fa-id-card"></i> FM3 / FM2</span>
+                                <span class="tag"><i class="fas fa-globe"></i> International</span>
+                                <span class="tag"><i class="fas fa-check-circle"></i> Valid in Mexico</span>
+                            </div>
+                            <p style="font-size: 0.9em; color: #64748b; margin-top: 0.5rem;"
+                                data-i18n="svc_foreign_lic_desc">
+                                Tramitamos tu licencia de conducir mexicana con tu pasaporte o forma migratoria. Proceso
+                                100%
+                                legal y seguro.
+                            </p>
+                        </div>
+
+                        <!-- Foreigner Plates Card -->
+                        <div class="service-item premium-item">
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-car-side"></i></div>
+                                <div>
+                                    <h4 data-i18n="svc_foreign_plates_title">Placas para Extranjeros</h4>
+                                    <small data-i18n="svc_foreign_plates_sub">Vehicle Registration</small>
+                                </div>
+                            </div>
+                            <div class="service-tags">
+                                <span class="tag"><i class="fas fa-passport"></i> Pasaporte</span>
+                                <span class="tag"><i class="fas fa-file-invoice"></i> Alta Legal</span>
+                            </div>
+                            <p style="font-size: 0.9em; color: #64748b; margin-top: 0.5rem;">
+                                Registramos tu vehículo extranjero o nacional para residentes extranjeros con toda la
+                                documentación oficial.
+                            </p>
+                        </div>
+
+                        <!-- Legalization Card -->
+                        <div class="service-item premium-item">
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-file-contract"></i></div>
+                                <div>
+                                    <h4 data-i18n="svc_legalization_title">Legalización de Autos</h4>
+                                    <small data-i18n="svc_legalization_sub">Car Legalization</small>
+                                </div>
+                            </div>
+                            <div class="service-tags">
+                                <span class="tag"><i class="fas fa-check-double"></i> Decreto</span>
+                                <span class="tag"><i class="fas fa-shield-alt"></i> REPUVE</span>
+                            </div>
+                            <p style="font-size: 0.9em; color: #64748b; margin-top: 0.5rem;">
+                                Regularización de vehículos de procedencia extranjera. Todo el proceso bajo el decreto
+                                vigente y
+                                registro en REPUVE.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Tabs Script -->
                 <script>
                     document.querySelectorAll('.tab-btn').forEach(button => {
@@ -596,69 +662,6 @@
                 </script>
             </div>
         </section>
-
-        <!-- Tab Content: Extranjeros -->
-        <div class="tab-content" id="extranjeros">
-            <div class="services-grid">
-                <!-- Foreigner License Card -->
-                <div class="service-item premium-item">
-                    <div class="service-header">
-                        <div class="service-icon"><i class="fas fa-passport"></i></div>
-                        <div>
-                            <h4 data-i18n="svc_foreign_lic_title">Licencia para Extranjeros</h4>
-                            <small data-i18n="svc_foreign_lic_sub">Driver's License for Foreigners</small>
-                        </div>
-                    </div>
-                    <div class="service-tags">
-                        <span class="tag"><i class="fas fa-id-card"></i> FM3 / FM2</span>
-                        <span class="tag"><i class="fas fa-globe"></i> International</span>
-                        <span class="tag"><i class="fas fa-check-circle"></i> Valid in Mexico</span>
-                    </div>
-                    <p style="font-size: 0.9em; color: #64748b; margin-top: 0.5rem;" data-i18n="svc_foreign_lic_desc">
-                        Tramitamos tu licencia de conducir mexicana con tu pasaporte o forma migratoria. Proceso 100%
-                        legal y seguro.
-                    </p>
-                </div>
-
-                <!-- Foreigner Plates Card -->
-                <div class="service-item premium-item">
-                    <div class="service-header">
-                        <div class="service-icon"><i class="fas fa-car-side"></i></div>
-                        <div>
-                            <h4 data-i18n="svc_foreign_plates_title">Placas para Extranjeros</h4>
-                            <small data-i18n="svc_foreign_plates_sub">Vehicle Registration</small>
-                        </div>
-                    </div>
-                    <div class="service-tags">
-                        <span class="tag"><i class="fas fa-passport"></i> Pasaporte</span>
-                        <span class="tag"><i class="fas fa-file-invoice"></i> Alta Legal</span>
-                    </div>
-                    <p style="font-size: 0.9em; color: #64748b; margin-top: 0.5rem;">
-                        Registramos tu vehículo extranjero o nacional para residentes extranjeros con toda la
-                        documentación oficial.
-                    </p>
-                </div>
-
-                <!-- Legalization Card -->
-                <div class="service-item premium-item">
-                    <div class="service-header">
-                        <div class="service-icon"><i class="fas fa-file-contract"></i></div>
-                        <div>
-                            <h4 data-i18n="svc_legalization_title">Legalización de Autos</h4>
-                            <small data-i18n="svc_legalization_sub">Car Legalization</small>
-                        </div>
-                    </div>
-                    <div class="service-tags">
-                        <span class="tag"><i class="fas fa-check-double"></i> Decreto</span>
-                        <span class="tag"><i class="fas fa-shield-alt"></i> REPUVE</span>
-                    </div>
-                    <p style="font-size: 0.9em; color: #64748b; margin-top: 0.5rem;">
-                        Regularización de vehículos de procedencia extranjera. Todo el proceso bajo el decreto vigente y
-                        registro en REPUVE.
-                    </p>
-                </div>
-            </div>
-        </div>
 
         <!-- Pillars / Why Us -->
         <section class="section-padding features">
