--- a/index.html
+++ b/index.html
@@ -1587,7 +1587,7 @@ Me gustaría solicitar una cotización lo mas pronto posible.`;
                         <li><a href="#inicio">Inicio</a></li>
                         <li><a href="#servicios">Servicios</a></li>
                         <li><a href="#contacto">Contacto</a></li>
-                        <li><a href="#">Aviso de Privacidad</a></li>
+                        <li><a href="aviso-privacidad.html">Aviso de Privacidad</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
