--- a/aviso-privacidad.html
+++ b/aviso-privacidad.html
@@ -165,8 +165,8 @@
                 </li>
                 <li><strong>Oponerse</strong> al tratamiento de sus datos para fines específicos</li>
             </ul>
-            <p>Para ejercer sus derechos ARCO, envíe su solicitud a través de WhatsApp al <strong>55 3575 7364</strong>
-                o <strong>55 2291 7267</strong>.</p>
+            <p>Para ejercer sus derechos ARCO, envíe su solicitud a través de WhatsApp al <strong>55 3575 7364</strong>.
+            </p>
 
             <h3>5. Revocación del Consentimiento</h3>
             <p>Puede revocar su consentimiento para el tratamiento de sus datos personales en cualquier momento,
@@ -200,6 +200,9 @@
             <ul>
                 <li>Proporcionar información veraz, completa y actualizada</li>
                 <li>Entregar documentación original y en regla requerida para los trámites</li>
+                <li><strong>Escanear sus documentos utilizando una impresora con escáner</strong> (no se aceptan
+                    fotografías ni aplicaciones de celular). Los archivos deben enviarse en formato <strong>PDF o
+                        PNG</strong> con un peso menor a <strong>1 MB</strong></li>
                 <li>Realizar el pago de servicios en tiempo y forma según lo acordado</li>
                 <li>Informar cualquier cambio en sus datos de contacto</li>
                 <li>Verificar la documentación recibida al momento de la entrega</li>
@@ -210,7 +213,9 @@
             <ul>
                 <li>Realizar los trámites solicitados con diligencia profesional</li>
                 <li>Mantener informado al cliente sobre el estatus de sus trámites</li>
-                <li>Resguardar la documentación del cliente con las medidas de seguridad necesarias</li>
+                <li>Resguardar la documentación del cliente con las medidas de seguridad necesarias, cumpliendo con las
+                    normas internacionales <strong>ISO/IEC 27001, 27002, 27032 y 27033</strong> para la gestión de
+                    seguridad de la información y protección contra ciberataques</li>
                 <li>Entregar los documentos oficiales obtenidos en tiempo y forma</li>
                 <li>Proteger la confidencialidad de la información del cliente</li>
             </ul>
@@ -274,9 +279,10 @@
             <p>Para cualquier duda, aclaración o ejercicio de derechos relacionados con este Aviso de Privacidad o
                 Contrato de Adhesión, puede contactarnos:</p>
             <ul>
-                <li><strong>WhatsApp:</strong> 55 3575 7364 | 55 2291 7267</li>
+                <li><strong>WhatsApp:</strong> 55 3575 7364</li>
                 <li><strong>Sitio Web:</strong> gestordeautos.com.mx</li>
-                <li><strong>Horario de atención:</strong> Lunes a Sábado, 9:00 - 20:00 hrs</li>
+                <li><strong>Horario de atención:</strong> Lunes a Viernes, 9:00 - 16:00 hrs (días hábiles, no festivos)
+                </li>
             </ul>
         </div>
 
