--- a/aviso-privacidad.html
+++ b/aviso-privacidad.html
@@ -4,7 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aviso de Privacidad | Gestor de Autos</title>
+    <title>Aviso de Privacidad y Contrato de Adhesión | Gestor de Autos</title>
+    <meta name="description"
+        content="Aviso de Privacidad y Contrato de Adhesión de Gestor de Autos. Conoce cómo protegemos tus datos personales con certificaciones ISO/IEC 27001, 27002, 27032 y 27033. Gestoría vehicular segura en EdoMex y CDMX.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://gestordeautos.com.mx/aviso-privacidad.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gestordeautos.com.mx/aviso-privacidad.html">
+    <meta property="og:title" content="Aviso de Privacidad | Gestor de Autos">
+    <meta property="og:description"
+        content="Protección de datos personales con certificaciones ISO/IEC. Gestoría vehicular segura y confiable.">
+    <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:url" content="https://gestordeautos.com.mx/aviso-privacidad.html">
+    <meta property="twitter:title" content="Aviso de Privacidad | Gestor de Autos">
+    <meta property="twitter:description" content="Protección de datos personales con certificaciones ISO/IEC.">
+
+    <!-- Geo Tags for Local SEO -->
+    <meta name="geo.region" content="MX-MEX">
+    <meta name="geo.placename" content="Estado de México">
+
     <link rel="stylesheet" href="styles.css">
     <style>
         .legal-container {
