--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             "closes": "20:00"
           },
           "contactPoint": [
-            { "@type": "ContactPoint", "telephone": "+525535757364", "contactType": "sales", "availableLanguage": ["es", "en"] },
-            { "@type": "ContactPoint", "telephone": "+525522917267", "contactType": "customer service", "availableLanguage": ["es", "en"] }
+            { "@type": "ContactPoint", "telephone": "+525535757364", "contactType": "sales", "availableLanguage": ["es", "en"] }
+
           ],
           "sameAs": ["https://wa.me/525535757364"],
           "areaServed": [
