--- a/index.html
+++ b/index.html
@@ -729,6 +729,62 @@
             </div>
         </section>
 
+        <!-- SEO Content Expansion: Coverage & FAQ -->
+        <section class="section-padding seo-content">
+            <div class="container">
+                <!-- Coverage List -->
+                <div class="seo-block">
+                    <h2 class="seo-title">Cobertura Total en Estado de México y CDMX</h2>
+                    <p class="seo-text">Gestor de Autos es tu mejor opción para trámites vehiculares en la Zona
+                        Metropolitana.
+                        Brindamos servicio especializado de <strong>Alta de Placas, Licencias y Cambios de
+                            Propietario</strong>
+                        en los principales municipios:</p>
+                    <ul class="coverage-list">
+                        <li><i class="fas fa-map-marker-alt"></i> Huixquilucan e Interlomas</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Chalco y Valle de Chalco</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Ixtapaluca</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Ecatepec de Morelos</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Tlalnepantla y Naucalpan</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Nezahualcóyotl</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Texcoco y Chimalhuacán</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Ciudad de México (CDMX)</li>
+                    </ul>
+                </div>
+
+                <!-- Expanded FAQ -->
+                <div class="seo-block faq-block">
+                    <h2 class="seo-title">Preguntas Frecuentes sobre Trámites 2026</h2>
+                    <div class="faq-grid">
+                        <div class="faq-item">
+                            <h3>¿Cuál es el costo de las placas del EdoMex en 2026?</h3>
+                            <p>El costo varía según el tipo de vehículo (auto, moto, carga) y si es alta nueva o
+                                renovación. En Gestor de Autos te ofrecemos una <strong>cotización exacta y
+                                    transparente</strong> por WhatsApp. ¡Pregunta por nuestras promociones del mes!</p>
+                        </div>
+                        <div class="faq-item">
+                            <h3>¿Realizan trámites urgentes sin cita?</h3>
+                            <p>¡Sí! Somos especialistas en gestión rápida. Olvídate de las filas y de buscar citas en el
+                                portal. Nosotros nos encargamos de todo el proceso de forma <strong>100% online y
+                                    urgente</strong> si lo requieres.</p>
+                        </div>
+                        <div class="faq-item">
+                            <h3>¿Puedo emplacar mi auto sin factura original?</h3>
+                            <p>Analizamos tu caso específico. En muchas ocasiones podemos ayudarte mediante procesos de
+                                <strong>jurisdicción voluntaria o facturas judiciales</strong>. Contáctanos para revisar
+                                tu documentación gratis.</p>
+                        </div>
+                        <div class="faq-item">
+                            <h3>¿Es seguro tramitar mi licencia o placas por internet?</h3>
+                            <p>Totalmente. En Gestor de Autos garantizamos la <strong>legalidad y autenticidad</strong>
+                                de todos los documentos. Entregamos QR verificable y puedes consultar tus trámites en
+                                los portales oficiales de control vehicular.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Google Reviews Section -->
         <section class="section-padding reviews-section">
             <div class="container">
